[gd_scene load_steps=7 format=3 uid="uid://crjli3vncl5g7"]

[ext_resource type="PackedScene" uid="uid://c4lyyfxwvqyfk" path="res://Scenes and Scripts/UI/Buttons/panelButton.tscn" id="1_h2pt1"]
[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_npdxi"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/ColourPicker/colour_sampler.gd" id="2_71mmq"]
[ext_resource type="Shader" path="res://Resources/Shaders/palette_swap.gdshader" id="2_v5p75"]
[ext_resource type="Texture2D" uid="uid://ber05i7n5tlcd" path="res://Textures/Buttons/icons/sampler.png" id="4_ie3bn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7alqc"]
resource_local_to_scene = true
shader = ExtResource("2_v5p75")

[node name="ColourSampler" type="PanelContainer"]
material = ExtResource("1_npdxi")
use_parent_material = true
offset_right = 12.0
offset_bottom = 12.0
script = ExtResource("2_71mmq")

[node name="SamplerContainer" type="HBoxContainer" parent="."]
use_parent_material = true
layout_mode = 2
alignment = 1

[node name="Sampler" parent="SamplerContainer" instance=ExtResource("1_h2pt1")]
material = SubResource("ShaderMaterial_7alqc")
layout_mode = 2
icon = ExtResource("4_ie3bn")
minimum_size = Vector2(21, 20)
toggle_mode = true

[node name="SamplerHint" type="ColorRect" parent="SamplerContainer"]
custom_minimum_size = Vector2(82, 18)
layout_mode = 2
size_flags_vertical = 4

[node name="SampleScreen" type="Popup" parent="."]
transparent_bg = true
size = Vector2i(640, 360)

[connection signal="toggled" from="SamplerContainer/Sampler" to="." method="_on_sampler_toggled"]
